--- a/03-CSS-variables/index-START.html
+++ b/03-CSS-variables/index-START.html
@@ -15,16 +15,21 @@
     <input id="blur" type="range" name="blur" min="0" max="25" value="10" data-sizing="px">
 
     <label for="base">Base Color</label>
-    <input id="base" type="color" name="base" value="#ffc600">
+    <input id="base" type="color" name="base" value="#FF665A">
   </div>
 
-  <img src="https://source.unsplash.com/7bwQXzbF6KE/800x500">
+  <img src="IMG_4226.JPG">
 
   <style>
 
     /*
       misc styles, nothing to do with CSS variables
     */
+    :root {
+      --base: #FF665A;
+      --spacing: 10px;
+      --blur: 10px;
+    }
 
     body {
       text-align: center;
@@ -42,10 +47,19 @@
     input {
       width: 100px;
     }
-  </style>
 
-  <script>
-  </script>
+    img{
+      width: 450px;
+      padding: var(--spacing);
+      background: var(--base);
+      filter: blur(var(--blur));
+    }
+
+    .hl {
+      color: var(--base);
+    }
+  </style>
+  <script src="main.js"></script>
 
 </body>
 </html>
