--- a/07-Array-Cardio-Day-2/index-START.html
+++ b/07-Array-Cardio-Day-2/index-START.html
@@ -26,15 +26,44 @@
 
     // Some and Every Checks
     // Array.prototype.some() // is at least one person 19 or older?
+    const isAdult = people.some(person =>
+      ((new Date().getFullYear()) - person.year)
+    );
+    console.log(isAdult);
+
+    // const isAdult = people.some(function(person) {
+    //   if ((new Date().getFullYear()) - person.year)
+    //   return true;
+    // })
+
     // Array.prototype.every() // is everyone 19 or older?
+
+    const allAdult = people.every(person =>
+      ((new Date().getFullYear()) - person.year));
+    console.log(allAdult);
 
     // Array.prototype.find()
     // Find is like filter, but instead returns just the one you are looking for
     // find the comment with the ID of 823423
 
+    const findID = comments.find(comment =>
+    (comment.id === 823423));
+    console.log(findID);
+
     // Array.prototype.findIndex()
+    const findIndex = comments.findIndex(comment =>
+    comment.id === 823423);
+    console.log(findIndex);
     // Find the comment with this ID
     // delete the comment with the ID of 823423
+
+    //comments.splice(findIndex, 1);
+    const reducedArray = [
+      ...comments.slice(0, findIndex),
+      ...comments.slice(findIndex + 1)
+    ];
+    console.log(reducedArray);
+    console.log(comments);
 
   </script>
 </body>
