--- a/10-Hold-Shift-to-Select-Multiple-Boxes/index-START.html
+++ b/10-Hold-Shift-to-Select-Multiple-Boxes/index-START.html
@@ -29,7 +29,7 @@
     .item:last-child {
       border-bottom: 0;
     }
-
+ /* input IDL attribute turns checked and the following works */
     input:checked + p {
       background: #F9F9F9;
       text-decoration: line-through;
