bg color changed

--- a/10-Hold-Shift-to-Select-Multiple-Boxes/index-START.html
+++ b/10-Hold-Shift-to-Select-Multiple-Boxes/index-START.html
@@ -9,7 +9,7 @@
 
     html {
       font-family: sans-serif;
-      background: #ffc600;
+      background: #014f86;
     }
 
     .inbox {
@@ -33,6 +33,7 @@
     input:checked + p {
       background: #F9F9F9;
       text-decoration: line-through;
+      opacity: 0.33;
     }
 
     input[type="checkbox"] {
