--- a/11-Custom-Video-Player/index.html
+++ b/11-Custom-Video-Player/index.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>HTML Video Player</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
   <div class="player">
     <video class="player__video viewer" src="652333414.mp4"></video>
 
@@ -19,7 +19,7 @@
       <input type="range" name="playbackRate" class="player__slider" min="0.5" max="2" step="0.1" value="1">
       <button data-skip="-10" class="player__button">« 10s</button>
       <button data-skip="25" class="player__button">25s »</button>
-      <button class="player__button goFull">&#xe5d0</button>
+      <button class="player__button goFull"><i class="fa fa-expand" aria-hidden="true"></i></button>
     </div>
   </div>
 
